Adicionando o Autenticador Jwt
