# middlewares/authenticateToken.js
@@ -1,0 +1,18 @@
+const jwt = require('jsonwebtoken');
+
+function authenticateJWT(req, res, next) {
+  const authHeader = req.headers.authorization;
+  if (!authHeader) {
+    return res.status(401).json({ error: 'Token não fornecido' });
+  }
+  const token = authHeader.split(' ')[1];
+  jwt.verify(token, 'segredo', (err, user) => {
+    if (err) {
+      return res.status(403).json({ error: 'Token inválido' });
+    }
+    req.user = user;
+    next();
+  });
+}
+
+module.exports = authenticateJWT;
