# swagger.json
@@ -66,6 +66,7 @@
     "/transfer": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [ { "bearerAuth": [] } ],
         "requestBody": {
           "required": true,
           "content": {
@@ -91,9 +92,19 @@
     "/transfers": {
       "get": {
         "summary": "Consultar transferências",
+        "security": [ { "bearerAuth": [] } ],
         "responses": {
           "200": { "description": "Lista de transferências" }
         }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
